# APCEMM

./: .gitattributes  .gitignore  .gitmodules  APCEMM.sh  Makefile  Makefile_CAPCEMM  Makefile_header.mk  README.md
.devcontainer/: Dockerfile.apcemm  README.md  devcontainer.json
AIM/: Makefile
AIM/include/: Aerosol.hpp  Coagulation.hpp  Nucleation.hpp  buildKernel.hpp
AIM/src/: Aerosol.cpp  Coagulation.cpp  Nucleation.cpp  buildKernel.cpp
Code.v05-00/: CMakeLists.txt  Makefile  Makefile_header.mk  vcpkg-configuration.json  vcpkg.json
Code.v05-00/cmake/: FindnetCDFCxx.cmake
Code.v05-00/data/: ENG_EI.txt
Code.v05-00/defaults/: Ambient.txt  input.yaml
Code.v05-00/include/: APCEMM.h  APCEMM.h.in
Code.v05-00/include/AIM/: Aerosol.hpp  Coagulation.hpp  Nucleation.hpp  Settling.hpp  buildKernel.hpp
Code.v05-00/include/Core/: Aircraft.hpp  Ambient.hpp  Cluster.hpp  DefaultInput.hpp  Diag_Mod.hpp  Emission.hpp  Engine.hpp  Fuel.hpp  Input.hpp  Input_Mod.hpp  Interface.hpp  LAGRIDPlumeModel.hpp  LiquidAer.hpp  MPMSimVarsWrapper.hpp  Mesh.hpp  Meteorology.hpp  Monitor.hpp  Output.hpp  Parameters.hpp  Parameters.hpp.txt  ReadInput.hpp  ReadJRates.hpp  Ring.hpp  SZA.hpp  Save.hpp  Species.hpp  Status.hpp  Structure.hpp  Timer.hpp  TimestepVarsWrapper.hpp  Util.hpp  Vortex.hpp
Code.v05-00/include/Defaults/: Ambient.hpp  Engine_EI.hpp  Input.hpp
Code.v05-00/include/EPM/: EPM.hpp  Indexes.hpp  Integrate.hpp  RHS.hpp  Solution.hpp  odeSolver.hpp
Code.v05-00/include/EPM/Models/: Base.hpp  External.hpp  NewPhysics.hpp  Original.hpp
Code.v05-00/include/EPM/Models/Original/: Indexes.hpp  Integrate.hpp  RHS.hpp  StateObserver.hpp  odeSolver.hpp
Code.v05-00/include/EPM/Utils/: Physics.hpp
Code.v05-00/include/FVM_ANDS/: AdvDiffSystem.hpp  BoundaryCondition.hpp  FVM_ANDS_HelperFunctions.hpp  FVM_ANDS_enums.hpp  FVM_Solver.hpp
Code.v05-00/include/KPP/: KPP.hpp  KPP_Global.h  KPP_Parameters.h
Code.v05-00/include/LAGRID/: FreeCoordBoxGrid.hpp  RemappingFunctions.hpp
Code.v05-00/include/SANDS/: FFT.hpp  Solver.hpp
Code.v05-00/include/Util/: Error.hpp  ForwardDecl.hpp  MC_Rand.hpp  MetFunction.hpp  MolarWeights.hpp  PhysConstant.hpp  PhysFunction.hpp  PlumeModelUtils.hpp  VectorUtils.hpp  YamlUtils.hpp
Code.v05-00/include/YamlInputReader/: YamlInputReader.hpp
Code.v05-00/src/: CMakeLists.txt  Main.cpp
Code.v05-00/src/AIM/: Aerosol.cpp  CMakeLists.txt  Coagulation.cpp  Nucleation.cpp  Settling.cpp  buildKernel.cpp
Code.v05-00/src/Core/: .PlumeModel.cpp.swp  Advection.cpp  Aircraft.cpp  Ambient.cpp  BoxModel.cpp  BuildTime.cpp  CMakeLists.txt  Cluster.cpp  Diag_Mod.cpp  Diffusion.cpp  Emission.cpp  Engine.cpp  FileHandler.cpp  Fuel.cpp  Input.cpp  Input_Mod.cpp  Input_Reader.cpp  LAGRIDPlumeModel.cpp  LiquidAer.cpp  MPMSimVarsWrapper.cpp  Main.cpp  Makefile  Mesh.cpp  Meteorology.cpp  PlumeModel.cpp  ReadInput.cpp  ReadJRates.cpp  Ring.cpp  SZA.cpp  Save.cpp  Species.cpp  Structure.cpp  TimestepVarsWrapper.cpp  Transport.cpp  Util.cpp  Vortex.cpp
Code.v05-00/src/EPM/: CMakeLists.txt  EPM.cpp  Integrate.cpp  Makefile  RHS.cpp  Solution.cpp  odeSolver.cpp
Code.v05-00/src/EPM/Models/: External.cpp
Code.v05-00/src/EPM/Models/Original/: Integrate.cpp  Model.cpp  RHS.cpp  StateObserver.cpp  odeSolver.cpp
Code.v05-00/src/EPM/Utils/: Physics.cpp
Code.v05-00/src/FVM_ANDS/: AdvDiffSystem.cpp  BoundaryCondition.cpp  CMakeLists.txt  FVM_ANDS_HelperFunctions.cpp  FVM_Solver.cpp
Code.v05-00/src/KPP/: CMakeLists.txt  KPP_Function.cpp  KPP_Hessian.cpp  KPP_HessianSP.cpp  KPP_HetRates.cpp  KPP_Integrator.cpp  KPP_Integrator_ADJ.cpp  KPP_Jacobian.cpp  KPP_JacobianSP.cpp  KPP_LinearAlgebra.cpp  KPP_Main_ADJ.cpp  KPP_Monitor.cpp  KPP_Photol.cpp  KPP_Rates.cpp  KPP_Stoichiom.cpp  KPP_Util.cpp  UCX.spc
Code.v05-00/src/LAGRID/: CMakeLists.txt  FreeCoordBoxGrid.cpp  RemappingFunctions.cpp
Code.v05-00/src/SANDS/: CMakeLists.txt  FFT.cpp  Solver.cpp
Code.v05-00/src/Util/: CMakeLists.txt  Error.cpp  MC_Rand.cpp  Makefile  MetFunction.cpp  PhysFunction.cpp  PlumeModelUtils.cpp  VectorUtils.cpp  YamlUtils.cpp
Code.v05-00/src/YamlInputReader/: CMakeLists.txt  YamlInputReader.cpp
Code.v05-00/temp/: CMakeLists.txt
Code.v05-00/tests/: CMakeLists.txt  test.cpp  test.yaml  test1.yaml  test2.yaml  test_LAGRID.cpp  test_SANDS.cpp  test_adv_diff_solver.cpp  test_aerosol.cpp  test_aircraft.cpp  test_buildkernel.cpp  test_integrate.cpp  test_met_inputfile.yaml  test_meteorology_metfile.nc  test_metfunction.cpp  test_nucleation.cpp  test_physfunction.cpp  test_solver_helpfunctions.hpp  test_yamlreader.cpp  testmain.cpp
Core/: Makefile
Core/data/: FFTW_Wisdom.txt
Core/include/: AIM.hpp  Aircraft.hpp  Ambient.hpp  Cluster.hpp  EPM_Solver.hpp  Emission.hpp  Engine.hpp  FileHandler.hpp  Fuel.hpp  Interface.hpp  Mesh.hpp  MolarWeights.hpp  Monitor.hpp  Output.hpp  Parameters.hpp  PhysConstant.h  PhysConstant.hpp  Ring.hpp  SANDS_Solver.hpp  Save.hpp  Species.hpp  Structure.hpp  Util.hpp  Vortex.hpp  cheader.h
Core/src/: AdvGlobal.cpp  AdvParam.cpp  Aircraft.cpp  Ambient.cpp  BuildFreq.cpp  BuildMesh.cpp  BuildTime.cpp  CallSolver.cpp  CallSpeciesDiffusion.cpp  Cluster.cpp  Combvec.cpp  DiffParam.cpp  DiffusionSolver.cpp  Emission.cpp  Engine.cpp  FileHandler.cpp  Fuel.cpp  Main.cpp  Mesh.cpp  PlumeModel.cpp  ReadEmission.cpp  Reshape.cpp  Ring.cpp  SPCDiffusion.cpp  SatPressures.cpp  Save.cpp  SaveWisdomFile.cpp  Species.cpp  Struct_SetShape.cpp  Structure.cpp  Timer.cpp  UpdateTime.cpp  Util.cpp  Vortex.cpp
EPM/: Makefile
EPM/include/: Integrate.hpp  odeSolver.hpp
EPM/src/: Integrate.cpp  odeSolver.cpp
Headers/: Makefile  PhysConstant.hpp  PhysFunction.cpp  PhysFunction.hpp
KPP/: Makefile  Makefile_KPP
KPP/data/: KPP.map
KPP/include/: KPP_Global.h  KPP_Parameters.h  (+1 more)
Main/: Makefile
SANDS/: Makefile
data/: Ambient.txt  KPP.kpp  KPP.map
include/: Monitor.h  Parameters.h
input_data/: init.txt
rundirs/: Batch_APCEMM.sh  CreateRunFolder.sh
src/: Ambient.txt  BuildFreq.cpp  BuildTime.cpp  PlumeModel.cpp  Reshape.cpp  SaveWisdomFile.cpp  UpdateTime.cpp
(+195 files in other folders)
