# These commands ensure that the libraries get built
add_subdirectory(${CMAKE_SOURCE_DIR}/src/Util)
add_subdirectory(${CMAKE_SOURCE_DIR}/src/AIM)
add_subdirectory(${CMAKE_SOURCE_DIR}/src/KPP)
add_subdirectory(${CMAKE_SOURCE_DIR}/src/EPM)
add_subdirectory(${CMAKE_SOURCE_DIR}/src/Core)
add_subdirectory(${CMAKE_SOURCE_DIR}/src/YamlInputReader)
add_subdirectory(${CMAKE_SOURCE_DIR}/src/FVM_ANDS)
add_subdirectory(${CMAKE_SOURCE_DIR}/src/LAGRID)
